<resources>
    <string name="app_name">My FoodPrint</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="liste_courses">Shopping List</string>
    <string name="welcome">Save the planet and stay healthy !</string>
    <string name="today">Today</string>
    <string name="steps">Steps</string>
    <string name="km">km</string>
    <string name="calories">Calories</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="title_activity_settings_activity">Settings_activity</string>
    <string name="Step_count">Step count</string>
    <string name="calories_burned">Calories burned</string>
    <string name="distance">Distance</string>
    <string name="age">Age</string>
    <string name="your_age">Your age</string>
    <string name="height">Height (m)</string>
    <string name="height_ft">Height (ft)</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="weight">Weight (kg)</string>
    <string name="your_weight">Your weight</string>
    <string name="steps_goal">Goal</string>
    <string name="weight_goal">Target Weight (kg)</string>
    <string name="weight_goal_lbs">Target Weight (lbs)</string>
    <string name="your_height">Your height</string>
    <string name="Personal_info">Personal info</string>
    <string name="Goals">Objectives</string>
    <string name="your_target_weight">Your target weight</string>
    <string name="Steps">Daily step target</string>
    <string name="Daily_step_target">Daily step target</string>
    <string name="caloric_intake">Daily Caloric intake</string>
    <string name="Daily_caloric_intake">Daily calorie intake</string>
    <string name="gender">Gender</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="you_should_eat_less">You should eat less</string>
    <string name="days_remaining">Days to go </string>
    <string name="ft">ft</string>
    <string name="calorie_surplus">Calorie surplus</string>
    <string name="calorie_deficit">Calorie deficit</string>
    <string name="add">Add</string>
    <string name="days_remaining_main">Days remaining</string>
    <string name="save">Save</string>
    <string name="weight_no_kg">Weight</string>
    <string name="settings_menu">Settings</string>
    <string name="units">Units</string>
    <string name="height_no_m">Height</string>
    <string name="goals_reached">Goal achieved !</string>
    <string name="you_have_reached_your_goals_today"> steps reached today.</string>
    <string name="miles">miles</string>
    <string name="Add_a_photo">Add a photo</string>
    <string name="photo_album">Photo album</string>
    <string name="please_set_gender">Please set a valid gender</string>
    <string name="ok">Done</string>
    <string name="daily_step_target">Your daily step target</string>
    <string name="graphs">Graphs</string>
    <string name="View_graphs">Graphs</string>
    <string name="Step_graph">Steps</string>
    <string name="Calorie_graph">Calories</string>
    <string name="Current_carbon_economy">Current carbon economy</string>
    <string name="expected_carbon_economy">Carbon economy</string>
    <string name="aubergine">Aubergine</string>
    <string name="ananas">Ananas</string>
    <string name="poivron">Poivron</string>
    <string name="abricot">Abricot</string>
    <string name="banane">Banane</string>
    <string name="cerise">Cerise</string>
    <string name="citron">Citron</string>
    <string name="clementine">Clementine</string>
    <string name="fraise">Fraise</string>
    <string name="framboise">Framboise</string>
    <string name="kiwi">Kiwi</string>
    <string name="melon">Melon</string>
    <string name="orange">Orange</string>
    <string name="pasteque">Pasteque</string>
    <string name="raisin">Raisin</string>
    <string name="tomate">Tomate</string>
    <string name="asperge">Asperge</string>
    <string name="avocat">Avocat</string>
    <string name="brocoli">Brocoli</string>
    <string name="carotte">Carotte</string>
    <string name="celeri">Celeri</string>
    <string name="champignon">Champignon</string>
    <string name="choux">Choux</string>
    <string name="courgette">Courgette</string>
    <string name="mais">Mais</string>
    <string name="navet">Navet</string>
    <string name="oignon">Oignon</string>
    <string name="petit_pois">Petit pois</string>
    <string name="poireau">Poireau</string>
    <string name="pomme_de_terre">Pomme de terre</string>
    <string name="radis">Radis</string>
    <string name="salade">Salade</string>
    <string name="periode">Période</string>
    <string name="empreinte_carbone_du_pro">Empreinte carbone du produit</string>
    <string name="carbon_consu">g de carbone économisé par rapport à </string>
    <string name="nouveau_pro">Ajouter un produit</string>
    <string name="nouvelle_liste">Nouvelle liste</string>
    <string name="total">Total (kg C02)</string>
</resources>